[SL] don't make logo fixed height, so that its aligned to top

--- a/parlassets/scss/_headerfooter.scss
+++ b/parlassets/scss/_headerfooter.scss
@@ -27,7 +27,7 @@ body {
   flex-shrink: 0;
 
   img {
-    height: 80px;
+    // height: 80px;
   }
 }
 
